--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -575,9 +575,9 @@
                                 span{
                                     display: inline-block;
                                     max-width: 100%;
-                                    white-space: nowrap;
-                                    overflow: hidden;
-                                    text-overflow: ellipsis;
+                                    // white-space: nowrap;
+                                    // overflow: hidden;
+                                    // text-overflow: ellipsis;
                                     padding-right: 10px;
                                 }
                                 img{
@@ -618,7 +618,7 @@
                                     // border-bottom: 1px solid #E4E5E7;
                                     &:last-child{
                                         border: 0;
-                                        padding-bottom: 0;
+                                        // padding-bottom: 0;
                                     }
                                 }
                                 .img-view-mode{
@@ -682,7 +682,7 @@
                             }
                         }
                         .added-questions-list{
-                            padding: 13px 30px;
+                            padding: 12px 30px;
                             background: #FFFFFF;
                             // box-shadow: inset 0px -1px 0px #E4E5E7;
                             position: relative;
@@ -788,6 +788,8 @@
         width: 3px !important;
     }
 }
+
+
 ::ng-deep.addSourceModalComponent{
     .modal-header {
         padding: 0 !important;
@@ -1002,4 +1004,139 @@
 }
 .alternate-question-bg{
     background: #F8F9FA;
+}
+
+::ng-deep .editfaqSourceModalPop{
+    .modal-body{
+        .add-questions-form{
+            padding: 0 !important;
+            .alternative-question-results{
+                .alternative-question{
+                    padding: 20px 23px 5px 23px !important;
+                    background: #F8F9FA !important;
+                    border-radius: 10px !important;
+                }
+            }
+            .add-alternative-questions{                
+                margin: 28px 0 0 0 !important;                
+                .question-name{
+                    color: #202124 !important;
+                    font-size: 14px !important;
+                    font-weight: bold !important;
+                    line-height: 17px !important;
+                    text-transform: uppercase;
+                }
+                .added-tags{
+                    color: #8A959F;
+                    font-weight: normal;
+                    font-size: 12px;
+                    line-height: 15px;
+                    margin-bottom: 18px;
+                }
+                .que-desc{
+                    color: #8A959F !important;
+                    font-size: 12px !important;
+                    line-height: 15px !important;
+                }
+                .kr-sg-button-primary{
+                    border-radius: 4px !important;
+                    font-size: 14px !important;
+                    border: 1px solid #BDC1C6 !important;
+                    background: #FFFFFF !important;
+                    color: #202124 !important;
+                }
+            }
+            .added-questions-list{
+                padding: 12px 0px !important;
+                background: #FFFFFF !important;
+                // box-shadow: inset 0px -1px 0px #E4E5E7;
+                position: relative !important;
+                transition: 0.3s all ease !important;
+                margin: 0 !important;
+                box-shadow: none !important;
+                .question-name{
+                    color: #202124 !important;
+                    font-weight: 500 !important;
+                    font-size: 14px !important;
+                    padding-right: 20px !important;
+                }
+                .added-tags{
+                    color: #5F6368 !important;
+                    font-size: 12px !important;
+                    padding-right: 20px !important;                                
+                }
+                .delete-icon{                               
+                    display: none !important;
+                    position: absolute !important;
+                    right: 0px !important;
+                    top: 27px !important;
+                }
+                &:hover{
+                    .delete-icon{                                   
+                        display: block !important;
+                        &.pos-trash {
+                            top: 16px !important;
+                        }
+                    }
+                }
+            }
+            hr{
+                border-top: 1px solid #BDC1C6;
+                margin: 20px 0;
+            }
+            .btn-sec{
+                margin: 30px 0 !important;
+                &.another_question_btn{
+                    margin: 20px 0 !important;
+                }
+            }
+            .text{
+                margin-bottom: 15px;
+                .heading{
+                    font-size: 14px !important;
+                    text-transform: uppercase;
+                }
+            }
+            .body_sec{
+                .body-top-content{
+                    padding-top: 0 !important;
+                }
+            }
+            .body-top-content {
+                padding: 0 !important;
+                .question-content {
+                    .bot-response-title{
+                        margin-top: 5px !important;
+                    }
+                    .bot-response-view-mode {
+                        .desc-info{
+                            padding: 0 0px 15px 0 !important;
+                            margin-bottom: 15px !important;
+                            border-bottom: 1px solid #BDC1C6 !important;
+                            // &:last-child{
+                            //     border-bottom: 0px solid #BDC1C6 !important;
+                            // }
+                        }
+                    }
+                    .conditionalBlock{
+                        padding-right: 0 !important;
+                    }
+                }
+            }
+        }
+    }
+}
+::ng-deep perfect-scrollbar .ps--active-y{
+    .ps__thumb-y{
+        width: 3px !important;
+    }
+    .ps__rail-y{
+        width: 3px !important;
+    }
+    .ps__thumb-x{
+        display: none !important;
+    }
+    .ps__rail-x{
+        display: none !important;
+    }
 }
