--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -322,10 +322,10 @@ body::-webkit-scrollbar {
 
 @media (max-width: 1200px){
     html, body {
-        overflow-y:hidden;
-        overflow-x: auto;
-        min-width: 1200px;
-        width: 100%;
+        overflow-y:hidden !important;
+        overflow-x: auto !important;
+        min-width: 1200px !important;
+        width: 100% !important;
     }
 }
 @media (max-width: 600px){
@@ -1337,4 +1337,9 @@ div.divBlockEmptylastChild:first-child {
             }
         }
     }
+}
+
+
+.cursor-pointer{
+    cursor: pointer;
 }
