--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -42,7 +42,7 @@
       </span>
     </div> 
     <div class="kr-sg-input-text-area"> 
-      <div *ngIf="responseObj.type==='javascript'" >
+      <div *ngIf="responseObj.type==='javascript'" class="-ml-20">
          <ngx-codemirror #codemirror [options]="codeMirrorOptions" [(ngModel)]="responseObj.payload" (ngModelChange)="setEditorContent($event,responseObj,type,index)"> </ngx-codemirror>
       </div>
       <textarea [perfectScrollbar]="config" *ngIf="responseObj.type==='string'"   (focus)="selectCurrentFocusedResponse(id,responseObj,type,index)"  [(ngModel)]="responseObj.payload" class="input-text" style="padding-bottom: 40px;" id="mainChatInputContainer{{type}}_{{index}}"></textarea>
@@ -65,11 +65,11 @@
      </div>
     </div>
   </div>
-  <div *ngIf="(responseObj.responseType !== 'default')" class="pt-2">
-   <button class="kr-sg-button-secondary" (click)="openImgApp(responseObj,index,type)">Add Image</button>
-   <span class="pl-1 imageUrlAdded" *ngIf="responseObj && responseObj.image && responseObj.image.url">{{responseObj.image.url}}</span>
-   <span class="pl-1" *ngIf="(responseObj.responseType ==='verticalSplit') && (!(responseObj.image && responseObj.image.url))">Add Image with Dimensions of 200px by 400px </span>
-   <span class="pl-1" *ngIf="(responseObj.responseType ==='horizontalSplit') && (!(responseObj.image && responseObj.image.url))">Add Image with Dimensions of 400px by 200px </span>
+  <div *ngIf="(responseObj.responseType !== 'default')" class="add_image_button_sec">
+   <button class="kr-sg-button-secondary btn_lg" (click)="openImgApp(responseObj,index,type)">Add Image</button>
+   <span class="imageUrlAdded" *ngIf="responseObj && responseObj.image && responseObj.image.url" title="{{responseObj.image.url}}">{{responseObj.image.url}}</span>
+   <span class="dec-info-text" *ngIf="(responseObj.responseType ==='verticalSplit') && (!(responseObj.image && responseObj.image.url))">Add Image with Dimensions of 200px by 400px </span>
+   <span class="dec-info-text" *ngIf="(responseObj.responseType ==='horizontalSplit') && (!(responseObj.image && responseObj.image.url))">Add Image with Dimensions of 400px by 200px </span>
   </div>
 </ng-template>
 <ng-template #botResponsePreview let-responses="responses" let-responseObj='responseObj' let-type="reponseType"
@@ -77,7 +77,7 @@
   <div class="body-top-content" (click)="currentEditIndex = index">
     <div class="question-content">
       <div class="conditionalBlock bot-response-view-mode">
-        <div>
+        <div class="split_mode" [ngClass]="{'split_mode_verticle': responseObj.responseType ==='verticalSplit'}">
           <div class="img-view-mode" *ngIf="responseObj.responseType !== 'default' && responseObj.image && responseObj.image.url">
             <img src="{{responseObj.image.url}}">
           </div>
@@ -130,19 +130,19 @@
   <div class="text">
     <div class="heading">Answer(s)</div>
     <div class="desc">Reorder the conditioned responses to execute in specific order</div>
- </div>
+  </div>
   <ng-container *ngFor="let faqObj of faqResponse.defaultAnswers ; let index = index">
     <div class="body-top-content pointer" title="Click to edit this response" (click)="currentEditIndex = index">
       <div class="question-content">
         <div class="conditionalBlock bot-response-view-mode">
-          <div class="bot-response-title">Bot Response <span *ngIf="faqResponse.defaultAnswers.length > 1">{{index + 1}}</span>
+          <div class="bot-response-title">Bot Response <span *ngIf="faqResponse.defaultAnswers.length > 1">{{index + 1}}</span> <span *ngIf="faqObj.answerType !== 'condition'">(DEFAULT)</span>
             <div class="advanced_mode_faq">
               <label class="kr-sg-toggle with-label" *ngIf="(currentEditIndex === index)">
                 <input type="checkbox" [checked]='(faqObj.answerType === "condition")' (click)="changeResponseType(faqObj)">
                 <div class="slider"><span class="no">Default</span><span class="yes">Conditional</span></div>
               </label>
             </div>
-            <div class="deleteResponseDiv red" (click)="$event.stopPropagation();delete(index)">Delete</div>
+            <div class="deleteResponseDiv red" (click)="$event.stopPropagation();delete(index)"><img src="assets/images/delete_response.svg">Delete</div>
           </div>
           <div class="condition-tags" *ngIf="faqObj && (faqObj.answerType === 'condition') && (currentEditIndex !== index)">Conditions : <span
               *ngIf="faqObj.conditions.length"><span
@@ -171,47 +171,59 @@
         </div>
       </div>
     </div>
-    <div class="row responseEditorContainer m-0" *ngIf="currentEditIndex === index">
-      <div class="col-6 p-1 col_">
-        <div class="tabs-sec">
-          <span class="tab-title " (click)="faqObj.type='string'" [ngClass]="{'active': faqObj.type === 'string'}">Editor</span>
-          <span class="tab-title" (click)="faqObj.type='javascript'" [ngClass]="{'active': faqObj.type==='javascript'}">&lt;/&gt; CODE</span>
-          <span class="tab-title d-none" (click)="faqObj.type='external'" [ngClass]="{'active': faqObj.type==='external'}">External</span>
+    <div class="responseEditorContainer" *ngIf="currentEditIndex === index">
+      <div class="top-sec d-flex">
+        <div class="col-6 left_sec">
+          <div class="tabs-sec">
+            <span class="tab-title " (click)="faqObj.type='string'" [ngClass]="{'active': faqObj.type === 'string'}">Editor</span>
+            <span class="tab-title" (click)="faqObj.type='javascript'" [ngClass]="{'active': faqObj.type==='javascript'}">&lt;/&gt; CODE</span>
+            <span class="tab-title d-none" (click)="faqObj.type='external'" [ngClass]="{'active': faqObj.type==='external'}">External</span>
+          </div>
         </div>
-        <div class="bot_rsponse_advance_mode">
-          <div class="layout-select">
-            <div class="d-flex align-items-center m-0 col-10 p-0">
-              <div class="title">Select Layout</div>
-              <div class="img-block" (click)="setResponseType('default',faqObj)" [ngClass]="{'active': (faqObj.responseType === 'default') || (!faqObj.responseType)}">
-                <img *ngIf="(faqObj.responseType !== 'default')" src="assets/icons/editor/no-image.svg">
-                <img  *ngIf="(faqObj.responseType === 'default')" src="assets/icons/editor/no-image-active.svg">
+        <div class="col-6 right-sec">
+          <div class="tabs-sec border-0">
+            <span class="tab-title pl-0">Response Preview</span>
+          </div>
+        </div>
+      </div>
+      <div class="bottom_sec d-flex">
+        <div class="col-6 left_sec">        
+          <div class="content-data">
+            <div class="bot_rsponse_advance_mode">
+              <div class="layout-select">
+                <div class="d-flex align-items-center m-0 col-10 p-0">
+                  <div class="title">Select Layout</div>
+                  <div class="img-block" (click)="setResponseType('default',faqObj)" [ngClass]="{'active': (faqObj.responseType === 'default') || (!faqObj.responseType)}">
+                    <img *ngIf="(faqObj.responseType !== 'default')" src="assets/icons/editor/no-image.svg">
+                    <img  *ngIf="(faqObj.responseType === 'default')" src="assets/icons/editor/no-image-active.svg">
+                  </div>
+                  <div class="img-block" (click)="setResponseType('horizontalSplit',faqObj)"  [ngClass]="{'active': (faqObj.responseType === 'horizontalSplit')}">
+                    <img *ngIf="(faqObj.responseType !== 'horizontalSplit')" src="assets/icons/editor/image-horizantal.svg">
+                    <img *ngIf="(faqObj.responseType === 'horizontalSplit')" src="assets/icons/editor/image-horizantal-active.svg" >
+                  </div>
+                  <div class="img-block d-none" (click)="setResponseType('verticalSplit',faqObj)"  [ngClass]="{'active': (faqObj.responseType === 'verticalSplit')}">
+                    <img *ngIf="(faqObj.responseType !== 'verticalSplit')" src="assets/icons/editor/image-vertical.svg">
+                    <img *ngIf="(faqObj.responseType == 'verticalSplit')" src="assets/icons/editor/image-vertical-active.svg" >
+                  </div>
+                </div>
               </div>
-              <div class="img-block" (click)="setResponseType('horizontalSplit',faqObj)"  [ngClass]="{'active': (faqObj.responseType === 'horizontalSplit')}">
-                <img *ngIf="(faqObj.responseType !== 'horizontalSplit')" src="assets/icons/editor/image-horizantal.svg">
-                <img *ngIf="(faqObj.responseType === 'horizontalSplit')" src="assets/icons/editor/image-horizantal-active.svg" >
-              </div>
-              <div class="img-block d-none" (click)="setResponseType('verticalSplit',faqObj)"  [ngClass]="{'active': (faqObj.responseType === 'verticalSplit')}">
-                <img *ngIf="(faqObj.responseType !== 'verticalSplit')" src="assets/icons/editor/image-vertical.svg">
-                <img *ngIf="(faqObj.responseType == 'verticalSplit')" src="assets/icons/editor/image-vertical-active.svg" >
-              </div>
+              <img src="assets/icons/sidemenu/delete-table.svg" class="delete-response hide">
+            </div>    
+            <ng-container *ngTemplateOutlet="botResponse; context{$implicit: faqResponse,responses:faqResponse.defaultAnswers,responseObj:faqObj,reponseType:'default',id:'default_',index:index }"> </ng-container>
+          </div>
+        </div>
+        <div class="col-6 right_sec">        
+          <div class="content-data">
+            <div class="responsePreviewBlock">
+              <perfect-scrollbar>
+                <ng-container *ngTemplateOutlet="botResponsePreview; context{$implicit: faqResponse,responses:faqResponse.defaultAnswers,responseObj:faqObj,reponseType:'default',id:'default_',index:index }"> </ng-container>
+              </perfect-scrollbar>
             </div>
           </div>
-          <img src="assets/icons/sidemenu/delete-table.svg" class="delete-response hide">
-        </div>    
-        <ng-container *ngTemplateOutlet="botResponse; context{$implicit: faqResponse,responses:faqResponse.defaultAnswers,responseObj:faqObj,reponseType:'default',id:'default_',index:index }"> </ng-container>
-      </div>
-      <div class="col-6 p-1 col_">
-        <div class="tabs-sec">
-          <span class="tab-title ">Response Preview</span>
         </div>
-        <div class="responsePreviewBlock">
-        <perfect-scrollbar>
-          <ng-container *ngTemplateOutlet="botResponsePreview; context{$implicit: faqResponse,responses:faqResponse.defaultAnswers,responseObj:faqObj,reponseType:'default',id:'default_',index:index }"> </ng-container>
-        </perfect-scrollbar>
-        </div>
-      </div>
+      </div>      
     </div>
-    <div class="col-12 p-0 pointer" title="Click to edit this response" *ngIf="currentEditIndex !== index">
+    <div class="col-12 p-0 pointer body_sec" title="Click to edit this response" *ngIf="currentEditIndex !== index">
        <ng-container *ngTemplateOutlet="botResponsePreview; context{$implicit: faqResponse,responses:faqResponse.defaultAnswers,responseObj:faqObj,reponseType:'default',id:'default_',index:index }"> </ng-container>
     </div>
   </ng-container>
@@ -240,15 +252,15 @@
         </div>
         <div class="added-tags text-truncate">Add alternate forms of the question, key terms.</div>
     </div>
-    <div class="col-2 p-0 text-right">
+    <div class="col-2 p-0 text-right" *ngIf="!isAdd">
         <button class="kr-sg-button-primary btn_lg" (click)="addAltQues()">Add</button>
     </div>
   </div>
   <div *ngIf="isAdd" class="alternative-question-results">
       <app-add-alternate-question [faqServ]="faqServiceAlt"></app-add-alternate-question>
   </div>
-  <div class="btn-sec mt-0"  *ngIf="isAdd">
-    <div class="left-btns">
+  <div class="btn-sec mt-0" *ngIf="isAdd">
+    <div class="left-btns another_question_btn">
       <button class="kr-sg-button-secondary btn_lg mr-0" (click)="addAnotherAlternate()"><img src="assets/icons/editor/plus-add.svg" class="mr-2" >Another Question</button>
     </div>
   </div>
