--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -530,7 +530,9 @@
         </div>
       </ng-container>
 </kr-modal>
-<kr-modal modalType="center" #editfaqSourceModalPop modalClass="modal_popups_">
+
+
+<kr-modal modalType="center" #editfaqSourceModalPop modalClass="modal_popups_ editfaqSourceModalPop">
     <ng-container  *ngIf="editfaq && selectedFaq">
   <div class="modal-header">
     <div class="title">Edit FAQ</div>
@@ -542,9 +544,9 @@
   </div>
 </perfect-scrollbar> 
   <div class="modal-footer">
-      <button class="kr-sg-button-primary btn_lg" (click)="faqUpdateEvent()">Save</button>
-      <button class="kr-sg-button-secondary btn_lg" (click)="faqCancle()">Cancel</button>
-      <button class="kr-sg-button-danger float-right" (click)="deleteInfividualQuestion(selectedFaq)">Delete</button>
+      <button class="kr-sg-button-primary btn_lg float-right" (click)="faqUpdateEvent()">Save</button>
+      <button class="kr-sg-button-secondary btn_lg float-right" (click)="faqCancle()">Cancel</button>
+      <button class="kr-sg-button-danger btn_lg float-left" (click)="deleteInfividualQuestion(selectedFaq)">Delete</button>
   </div>
 </ng-container>
 </kr-modal>
