--- a/findly-builder/src/app/components/app-body/app-body.component.html
+++ b/findly-builder/src/app/components/app-body/app-body.component.html
@@ -1,6 +1,6 @@
 <router-outlet></router-outlet>
 <div [hidden]="bridgeData">
-    <app-insights  [data] = "bridgeData"></app-insights>
+    <app-insights  [data] = "bridgeData" [query]="query"></app-insights>
 </div> 
 <div [hidden]="true">
     <app-add-result ></app-add-result>
