--- a/findly-builder/src/app/components/weights/weights.component.html
+++ b/findly-builder/src/app/components/weights/weights.component.html
@@ -25,17 +25,26 @@
                         <div>{{weightModal.name}} 
                             <!-- <img src="assets/icons/warning_escalation.svg"> -->
                         </div>
-                        <div class="pre_defined d-none">PRE-DEFINED</div>
+                        <div class="pre_defined" *ngIf="!weightModal.isField">PRE-DEFINED</div>
                     </div>
-                    <div class="col-5 desc text-truncate">{{weightModal.description}}</div>
+                    <div class="col-5 desc text-truncate">
+                        <span *ngIf="currentEditIndex !== i">{{weightModal.desc}}</span>
+                        <div class="kr-sg-input-text-area" *ngIf="currentEditIndex === i">
+                            <textarea [(ngModel)]="weightModal.desc" (keyup)="disableCancle = false" placeholder="Short description" class="input-text weighDesc"></textarea>
+                        </div>
+                    </div>
                     <div class="col-4 sliderContainer">
                         <div class="range-slider">
                             <app-range-slider [customClass]='"weightsSlider"' [allData]='weightModal.sliderObj' (valueEvent)="valueEvent($event,weightModal)"></app-range-slider>
                         </div>    
                         <div class="sliderVal">{{weightModal.sliderObj.default}}</div>                                            
-                        <div class="action_links">
+                        <div class="action_links"  *ngIf="weightModal.isField  && (currentEditIndex !== i)">
                             <span class="actions-links pr-4" (click)="editWeight(weightModal,i)"><img class="action_icon" [container]="'body'" ngbTooltip='Edit' src="assets/images/edit-pencil.svg"></span>
                             <span class="actions-links" ngbTooltip='Delete' [container]="'body'" (click)="deleteWeight(weightModal,$event,i)"><img class="action_icon" src="assets/icons/trashIcon.svg"></span>
+                        </div>
+                        <div class="action_links editBlock"  *ngIf="currentEditIndex === i">
+                            <span class="actions-links pr-1" (click)="weightModal.desc = currentEditDesc;currentEditIndex = -1"><img class="action_icon" src="assets/images/Gray-Close-withBorder.svg"></span>
+                            <span class="actions-links" (click)="currentEditIndex = -1"><img class="action_icon" src="assets/images/Gray-tick-withBorder.svg"></span>
                         </div>
                     </div>
                 </div>
@@ -61,7 +70,7 @@
     </div>
     <perfect-scrollbar class="perfect-scroll-modal-body">
     <div class="modal-body textAlignLeft" *ngIf="addEditWeighObj">
-        <div class="search_block">
+        <div class="search_block" *ngIf="!addEditWeighObj._id">
             <div class="row m-0 align-items-center">
                 <div class="kr-sg-dropdowns col-12 p-0" [ngClass]="{'disabled': addEditWeighObj._id}">
                     <div class="kr-sg-input-search dropdown dropdown-open line-height-0">
@@ -75,7 +84,7 @@
                 </div>
             </div>
         </div> 
-        <div class="kr-sg-input-text mb-25 d-none">
+        <div class="kr-sg-input-text mb-25" *ngIf="addEditWeighObj._id" [ngClass]="{'disabled': addEditWeighObj._id}">
             <div class="label-text">Weight Name</div>
             <input type="text" [(ngModel)]="addEditWeighObj.name" placeholder="Placeholder text" class="input-text">
         </div>
