--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -213,7 +213,7 @@
                       </label>
                     </div>
                   </div>
-                  <div *ngIf="crwalObject.advanceOpts && crwalObject.advanceOpts.crawlEverything">
+                  <div class = "col-12 p-0" *ngIf="crwalObject.advanceOpts && crwalObject.advanceOpts.crawlEverything">
                     <div class="allow-list-data-label label_text_dis m10">Allow List <img src="assets/icons/Info-small.svg" class="ml-1">
                       <label class="kr-sg-toggle full-input list">
                         <input type="checkbox" id="allowUrlId" name = "allowUrl" disabled>
@@ -228,7 +228,7 @@
                     </div>
                   </div>
                 <div class="inner-content row m-0">
-                  <div *ngIf ="!crwalObject.advanceOpts.crawlEverything" class="w-100 show-allow-urls">
+                  <div *ngIf ="!crwalObject.advanceOpts.crawlEverything" class="w-100 show-allow-urls col-12 p-0">
                     <div class="allow-list-data-label label_text_dis">Allow List <img src="assets/icons/Info-small.svg" class="ml-1"> 
                       <label class="kr-sg-toggle full-input list">
                         <input type="checkbox" id="allowUrlId" name = "allowUrl" [(ngModel)]="crwalObject.advanceOpts.allowedOpt" (click)="exceptUrl(crwalObject.advanceOpts.allowedOpt)">
