--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -373,7 +373,7 @@
           </div>
         </div>
       </div>
-      <div *ngIf="selectedSource.advanceSettings && selectedSource.advanceSettings.crawlEverything">
+      <div class = "col-12 p-0" *ngIf="selectedSource.advanceSettings && selectedSource.advanceSettings.crawlEverything">
         <div class="allow-list-data-label label_text">Allow List <img src="assets/icons/Info-small.svg" class="ml-1">
           <label class="kr-sg-toggle full-input list">
             <input type="checkbox" id="allowUrlId" name="allowUrl" disabled>
