--- a/findly-builder/src/app/components/add-result/add-result.component.html
+++ b/findly-builder/src/app/components/add-result/add-result.component.html
@@ -30,6 +30,7 @@
             <!-- BUTTONS ENDS HERE -->
         </div>
     </div>
+  
     <div class="search">
         <input type="text" class= "search-box" name ="searchTxt" [(ngModel)] = "searchTxt" placeholder="Search by title,description or url" (keyup)="keyFunc(searchTxt)">
         <img class="closeCross" src="assets/images/close.svg" (click)="clearReocrd()">
@@ -101,9 +102,15 @@
         </div>
        </ng-container>
     </perfect-scrollbar>
-    <div class="footer">
-        <span class="desc" *ngIf="recordArray.length" >{{ recordArray.length }} results selected</span>
-        <button class="bef-add" [ngClass] = "{'add' : recordArray.length > 0}" (click) = "pushRecord()" [disabled] = "!recordArray.length">Add</button>
-        <button class="cancel" (click) = "cancelRecord()">Cancel</button>
+    <div class="footer row">
+        <div class="col-7">
+            <span class="desc" *ngIf="recordArray.length" >{{ recordArray.length }} results selected</span>
+        </div>
+        <div class="col-2">
+            <button class="bef-add" [ngClass] = "{'add' : recordArray.length > 0}" (click) = "pushRecord()" [disabled] = "!recordArray.length">Add</button>
+        </div>
+        <div class="col-2">
+            <button class="cancel col3" (click) = "cancelRecord()">Cancel</button>
+        </div>
     </div>
 </div>
