--- a/findly-builder/src/app/components/insights/insights.component.scss
+++ b/findly-builder/src/app/components/insights/insights.component.scss
@@ -27,7 +27,7 @@
         box-sizing: border-box;
         border-radius: 8px;
         position: absolute;
-        left: 228px;
+        //left: 228px;
         top: 16px;
         height: 50px;
         width: 300px;
@@ -266,7 +266,7 @@
 .graphMode{
     position: absolute;
     top: 84px;
-    left: 473px;
+    left: 485px;
     z-index: 1000;
     height: 100%;
     border: 1px solid #A8C8DD;
