FLY-309 issue fixed and re-structured code

--- a/findly-builder/src/app/components/add-faq/add-faq.component.scss
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.scss
@@ -279,6 +279,8 @@
                     padding: 20px 0 20px 20px;
                     margin:  0 !important;
                     height: 231px;
+                    width: 100%;
+                    word-break: break-word;
                     border-radius: 8px;
                     perfect-scrollbar{
                         padding-right: 20px;
