--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -6,6 +6,11 @@
 
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 // @import '~perfect-scrollbar/css/perfect-scrollbar.css';
+@import '~codemirror/lib/codemirror';
+@import '~codemirror/theme/material';
+@import '~codemirror/lib/codemirror.css';
+@import '~codemirror/addon/fold/foldgutter.css';
+@import '~codemirror/addon/lint/lint.css';
 @import "./variables/variables";
 @import "./bt-styleguide.scss";
 
